Improving metadata in preparation for Andika conversion

--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -7,21 +7,15 @@
   <key>capHeight</key>
   <integer>1356</integer>
   <key>copyright</key>
-  <string>Copyright (c) SIL International, 1994-2017.</string>
+  <string>Copyright (c) SIL International, 1994-2017</string>
   <key>descender</key>
   <integer>-810</integer>
   <key>familyName</key>
   <string>Doulos SIL</string>
   <key>italicAngle</key>
   <integer>0</integer>
-  <key>macintoshFONDFamilyID</key>
-  <integer>5313</integer>
-  <key>macintoshFONDName</key>
-  <string>Doulos SIL</string>
   <key>openTypeHeadCreated</key>
-  <string>2014/10/31 06:31:13</string>
-  <key>openTypeHeadFlags</key>
-  <array/>
+  <string>2017/06/08 17:00:00</string>
   <key>openTypeHheaAscender</key>
   <integer>2324</integer>
   <key>openTypeHheaDescender</key>
@@ -29,11 +23,11 @@
   <key>openTypeHheaLineGap</key>
   <integer>0</integer>
   <key>openTypeNameDescription</key>
-  <string/>
+  <string>Copyright (c) SIL International, 1994-2017</string>
   <key>openTypeNameDesigner</key>
   <string>Walt Agee, Victor Gaultney, Peter Martin, Debbi Hosken, Becca Hirsbrunner</string>
   <key>openTypeNameDesignerURL</key>
-  <string/>
+  <string>http://scripts.sil.org/</string>
   <key>openTypeNameLicense</key>
   <string>Copyright (c) 1994-2017, SIL International (http://www.sil.org/) with Reserved Font Names "Doulos" and "SIL".
 
@@ -83,7 +77,11 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>openTypeNameManufacturer</key>
   <string>SIL International</string>
   <key>openTypeNameManufacturerURL</key>
-  <string>http://scripts.sil.org/</string>
+  <string>http://www.sil.org/</string>
+  <key>openTypeNamePreferredFamilyName</key>
+  <string>Doulos</string>
+  <key>openTypeNamePreferredSubfamilyName</key>
+  <string>Regular</string>
   <key>openTypeNameUniqueID</key>
   <string>SIL International: Doulos SIL Regular: 2017</string>
   <key>openTypeNameVersion</key>
@@ -180,7 +178,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
     <integer>89</integer>
   </array>
   <key>openTypeOS2VendorID</key>
-  <string>SIL</string>
+  <string>SIL </string>
   <key>openTypeOS2WeightClass</key>
   <integer>400</integer>
   <key>openTypeOS2WidthClass</key>
@@ -247,10 +245,6 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <integer>-290</integer>
   <key>postscriptUnderlineThickness</key>
   <integer>120</integer>
-  <key>postscriptUniqueID</key>
-  <integer>4013406</integer>
-  <key>postscriptWeightName</key>
-  <string>regular</string>
   <key>styleMapFamilyName</key>
   <string>Doulos SIL</string>
   <key>styleMapStyleName</key>
