--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -79,7 +79,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>openTypeNameManufacturerURL</key>
   <string>http://www.sil.org/</string>
   <key>openTypeNamePreferredFamilyName</key>
-  <string>Doulos</string>
+  <string>Doulos SIL</string>
   <key>openTypeNamePreferredSubfamilyName</key>
   <string>Regular</string>
   <key>openTypeNameUniqueID</key>
