--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11767,6 +11767,101 @@
   </array>
   <key>com.schriftgestaltung.useNiceNames</key>
   <false/>
+  <key>org.sil.altLineMetrics</key>
+  <dict>
+    <key>loose</key>
+    <dict>
+      <key>ascender</key>
+      <integer>2800</integer>
+      <key>descender</key>
+      <integer>-1100</integer>
+    </dict>
+    <key>tight</key>
+    <dict>
+      <key>ascender</key>
+      <integer>1825</integer>
+      <key>descender</key>
+      <integer>-443</integer>
+    </dict>
+  </dict>
+  <key>org.sil.lcg.toneLetters</key>
+  <dict>
+    <key>contourWidth</key>
+    <integer>435</integer>
+    <key>dotSize</key>
+    <integer>164</integer>
+    <key>dotSpacing</key>
+    <integer>170</integer>
+    <key>glyphDepth</key>
+    <integer>0</integer>
+    <key>glyphHeight</key>
+    <integer>1425</integer>
+    <key>italicAngle</key>
+    <integer>0</integer>
+    <key>marginDotLeft</key>
+    <integer>105</integer>
+    <key>marginDotRight</key>
+    <integer>145</integer>
+    <key>marginFlatLeft</key>
+    <integer>110</integer>
+    <key>marginFlatRight</key>
+    <integer>150</integer>
+    <key>marginPointLeft</key>
+    <integer>85</integer>
+    <key>marginPointRight</key>
+    <integer>125</integer>
+    <key>strokeThickness</key>
+    <integer>110</integer>
+  </dict>
+  <key>org.sil.lcg.transforms</key>
+  <dict>
+    <key>smallcaps</key>
+    <dict>
+      <key>adjustMetrics</key>
+      <integer>10</integer>
+      <key>boldX</key>
+      <integer>7</integer>
+      <key>boldY</key>
+      <integer>11</integer>
+      <key>scaleX</key>
+      <real>0.86</real>
+      <key>scaleY</key>
+      <real>0.77</real>
+    </dict>
+    <key>subscript</key>
+    <dict>
+      <key>scaleX</key>
+      <real>0.72</real>
+      <key>scaleY</key>
+      <real>0.6</real>
+      <key>shiftX</key>
+      <integer>10</integer>
+      <key>shiftY</key>
+      <integer>-460</integer>
+    </dict>
+    <key>superscript</key>
+    <dict>
+      <key>scaleX</key>
+      <real>0.72</real>
+      <key>scaleY</key>
+      <real>0.6</real>
+      <key>shiftX</key>
+      <integer>10</integer>
+      <key>shiftY</key>
+      <integer>806</integer>
+    </dict>
+    <key>superscriptCaps</key>
+    <dict>
+      <key>scaleX</key>
+      <integer>1</integer>
+      <key>scaleY</key>
+      <integer>1</integer>
+      <key>shiftX</key>
+      <integer>0</integer>
+      <key>shiftY</key>
+      <integer>0</integer>
+    </dict>
+  </dict>
   <key>public.glyphOrder</key>
   <array>
     <string>.notdef</string>
