Adding com.schriftgestaltung.weightValue to lib.plist

--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -3707,6 +3707,8 @@
   </array>
   <key>com.schriftgestaltung.useNiceNames</key>
   <false/>
+  <key>com.schriftgestaltung.weightValue</key>
+  <integer>400</integer>
   <key>org.sil.altLineMetrics</key>
   <dict>
     <key>loose</key>
