--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -7,7 +7,7 @@
   <key>capHeight</key>
   <integer>1356</integer>
   <key>copyright</key>
-  <string>Copyright (c) SIL International, 1994-2017</string>
+  <string>Copyright (c) 1994-2017 SIL International</string>
   <key>descender</key>
   <integer>-810</integer>
   <key>familyName</key>
