--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -243,7 +243,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>postscriptUnderlineThickness</key>
   <integer>120</integer>
   <key>styleMapFamilyName</key>
-  <string>Charis SIL</string>
+  <string>Doulos SIL</string>
   <key>styleMapStyleName</key>
   <string>regular</string>
   <key>styleName</key>
