Design 5 .sc clicks, U/L anchors. Reposition U+031F CombPlusSgnBlw (RFS-646)

--- a/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
@@ -4,5 +4,9 @@
 <dict>
   <key>CombWigglyLineBlw</key>
   <string>C_ombW_igglyL_ineB_lw.glif</string>
+  <key>LtnRetrClick</key>
+  <string>L_tnR_etrC_lick.glif</string>
+  <key>LtnRetrClick.sc</key>
+  <string>L_tnR_etrC_lick.sc.glif</string>
 </dict>
 </plist>
