--- a/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>CombGrave</key>
+  <string>C_ombG_rave.glif</string>
   <key>CombWigglyLineBlw</key>
   <string>C_ombW_igglyL_ineB_lw.glif</string>
   <key>LtnRetrClick</key>
