--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -5392,6 +5392,8 @@
   <string>L_tnS_mU_R_ingA_bv.sc.glif</string>
   <key>LtnSmUStrk</key>
   <string>L_tnS_mU_S_trk.glif</string>
+  <key>LtnSmUStrk.sc</key>
+  <string>L_tnS_mU_S_trk.sc.glif</string>
   <key>LtnSmUTilde</key>
   <string>L_tnS_mU_T_ilde.glif</string>
   <key>LtnSmUTilde.sc</key>
