--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -1974,6 +1974,7 @@
     <string>LtnCapTurnedV</string>
     <string>GrSmCapLamda</string>
     <string>MathFrktCapV</string>
+    <string>LtnCapRamsHorn</string>
     <string>LtnCapGamma</string>
     <string>CySmWe</string>
     <string>ModSmW</string>
@@ -4279,6 +4280,7 @@
     <string>LtnSmVYDigraph.sc</string>
     <string>LtnSmVend.sc</string>
     <string>LtnSmTurnedV.sc</string>
+    <string>LtnSmRamsHorn.sc</string>
     <string>LtnSmGamma.sc</string>
     <string>CySmIzhitsa.sc</string>
     <string>LtnSmW.sc</string>
@@ -7870,6 +7872,8 @@
     <string>uni1E5E</string>
     <key>LtnCapRRotunda</key>
     <string>uniA75A</string>
+    <key>LtnCapRamsHorn</key>
+    <string>uniF26E</string>
     <key>LtnCapRevCMiddleDot</key>
     <string>uniA73E</string>
     <key>LtnCapRevE</key>
@@ -10896,6 +10900,8 @@
     <string>uni0264.GammaStyle</string>
     <key>LtnSmRamsHorn.LrgBowl</key>
     <string>uni0264.LrgBowl</string>
+    <key>LtnSmRamsHorn.sc</key>
+    <string>uni0264.sc</string>
     <key>LtnSmRevC</key>
     <string>uni2184</string>
     <key>LtnSmRevCMiddleDot</key>
