Raise u1D77 and uA77F to sit on baseline (RFS-718 & RFS-719); adjust anchor heights accordingly

--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -9,6 +9,10 @@
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
   <string>1286</string>
+  <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
+  <array>
+    <string>xd/LtnSmTrndInsularG hd/LtnSmTurnedG ho</string>
+  </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesLastChange</key>
