--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -5960,8 +5960,6 @@
   <string>M_odC_apG_.glif</string>
   <key>ModCapH</key>
   <string>M_odC_apH_.glif</string>
-  <key>ModCapHStrk</key>
-  <string>M_odC_apH_S_trk.glif</string>
   <key>ModCapI</key>
   <string>M_odC_apI_.glif</string>
   <key>ModCapJ</key>
@@ -6148,6 +6146,8 @@
   <string>M_odS_mC_.glif</string>
   <key>ModSmCDep</key>
   <string>M_odS_mC_D_ep.glif</string>
+  <key>ModSmCapHDblStrk</key>
+  <string>M_odS_mC_apH_D_blS_trk.glif</string>
   <key>ModSmCapIStrk</key>
   <string>M_odS_mC_apI_S_trk.glif</string>
   <key>ModSmCapIStrkDep</key>
