Completing rename of 1D78 [nobuild]

--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -1045,7 +1045,7 @@
     <string>GrSmCapPi</string>
     <string>CyCapEn</string>
     <string>ModCapH</string>
-    <string>ModCyCapEn</string>
+    <string>ModCySmEn</string>
     <string>LtnSmCapH</string>
     <string>LtnCapHCircum</string>
     <string>LtnCapHCaron</string>
@@ -9737,7 +9737,7 @@
     <string>uni02D2</string>
     <key>ModCrossAccent</key>
     <string>uni02DF</string>
-    <key>ModCyCapEn</key>
+    <key>ModCySmEn</key>
     <string>uni1D78</string>
     <key>ModDblApos</key>
     <string>uni02EE</string>
