--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -161,6 +161,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
     <integer>45</integer>
     <integer>46</integer>
     <integer>47</integer>
+    <integer>57</integer>
     <integer>60</integer>
     <integer>62</integer>
     <integer>64</integer>
