--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -21,7 +21,7 @@
   <key>openTypeHheaLineGap</key>
   <integer>0</integer>
   <key>openTypeNameDescription</key>
-  <string>Doulos SIL is a Unicode-based font family that supports the wide range of languages that use the Latin and Cyrillic scripts.</string>
+  <string>Font family for languages that use Latin and Cyrillic scripts</string>
   <key>openTypeNameDesigner</key>
   <string>Walt Agee, Victor Gaultney, Peter Martin, Debbi Hosken, Becca Hirsbrunner</string>
   <key>openTypeNameDesignerURL</key>
@@ -83,7 +83,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>openTypeNameUniqueID</key>
   <string>SIL International: Doulos SIL Regular: 2021</string>
   <key>openTypeNameVersion</key>
-  <string>Version 5.970 RC1</string>
+  <string>Version 5.980 RC1</string>
   <key>openTypeOS2CodePageRanges</key>
   <array>
     <integer>0</integer>
@@ -246,7 +246,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>versionMajor</key>
   <integer>5</integer>
   <key>versionMinor</key>
-  <integer>970</integer>
+  <integer>980</integer>
   <key>xHeight</key>
   <integer>909</integer>
 </dict>
