--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -13,7 +13,7 @@
   <key>familyName</key>
   <string>Doulos SIL</string>
   <key>openTypeHeadCreated</key>
-  <string>2021/06/22 22:19:14</string>
+  <string>2021/06/28 21:42:03</string>
   <key>openTypeHheaAscender</key>
   <integer>2324</integer>
   <key>openTypeHheaDescender</key>
@@ -83,7 +83,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>openTypeNameUniqueID</key>
   <string>SIL International: Doulos SIL Regular: 2021</string>
   <key>openTypeNameVersion</key>
-  <string>Version 5.980 RC1</string>
+  <string>Version 6.000</string>
   <key>openTypeOS2CodePageRanges</key>
   <array>
     <integer>0</integer>
@@ -244,9 +244,9 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>unitsPerEm</key>
   <integer>2048</integer>
   <key>versionMajor</key>
-  <integer>5</integer>
+  <integer>6</integer>
   <key>versionMinor</key>
-  <integer>980</integer>
+  <integer>0</integer>
   <key>xHeight</key>
   <integer>909</integer>
 </dict>
