--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -13,7 +13,7 @@
   <key>familyName</key>
   <string>Doulos SIL</string>
   <key>openTypeHeadCreated</key>
-  <string>2021/06/28 21:42:03</string>
+  <string>2021/07/02 19:10:49</string>
   <key>openTypeHheaAscender</key>
   <integer>2324</integer>
   <key>openTypeHheaDescender</key>
@@ -83,7 +83,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>openTypeNameUniqueID</key>
   <string>SIL International: Doulos SIL Regular: 2021</string>
   <key>openTypeNameVersion</key>
-  <string>Version 6.000</string>
+  <string>Version 6.001</string>
   <key>openTypeOS2CodePageRanges</key>
   <array>
     <integer>0</integer>
@@ -193,7 +193,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
     <integer>1423</integer>
   </array>
   <key>postscriptFontName</key>
-  <string>DoulosSIL-Regular</string>
+  <string>DoulosSIL</string>
   <key>postscriptFullName</key>
   <string>Doulos SIL Regular</string>
   <key>postscriptOtherBlues</key>
@@ -246,7 +246,7 @@ THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
   <key>versionMajor</key>
   <integer>6</integer>
   <key>versionMinor</key>
-  <integer>0</integer>
+  <integer>1</integer>
   <key>xHeight</key>
   <integer>909</integer>
 </dict>
