--- a/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
@@ -6,9 +6,27 @@
   <string>C_ombG_rave.glif</string>
   <key>CombWigglyLineBlw</key>
   <string>C_ombW_igglyL_ineB_lw.glif</string>
+  <key>LtnInvGlottalStopCurl</key>
+  <string>L_tnI_nvG_lottalS_topC_url.glif</string>
   <key>LtnRetrClick</key>
   <string>L_tnR_etrC_lick.glif</string>
   <key>LtnRetrClick.sc</key>
   <string>L_tnR_etrC_lick.sc.glif</string>
+  <key>LtnSmCapTurnedK</key>
+  <string>L_tnS_mC_apT_urnedK_.glif</string>
+  <key>LtnSmEshCurlDblBar</key>
+  <string>L_tnS_mE_shC_urlD_blB_ar.glif</string>
+  <key>LtnSmEshDblBar</key>
+  <string>L_tnS_mE_shD_blB_ar.glif</string>
+  <key>LtnSmLFishhook</key>
+  <string>L_tnS_mL_F_ishhook.glif</string>
+  <key>LtnSmRevK</key>
+  <string>L_tnS_mR_evK_.glif</string>
+  <key>LtnSmSCurl</key>
+  <string>L_tnS_mS_C_url.glif</string>
+  <key>LtnSmTurnedTCurl</key>
+  <string>L_tnS_mT_urnedT_C_url.glif</string>
+  <key>LtnStretchedCCurl</key>
+  <string>L_tnS_tretchedC_C_url.glif</string>
 </dict>
 </plist>
