[RFS-801] Doulos: design remaining Unicode 14 glyphs

--- a/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs.public.background/contents.plist
@@ -12,6 +12,8 @@
   <string>L_tnR_etrC_lick.glif</string>
   <key>LtnRetrClick.sc</key>
   <string>L_tnR_etrC_lick.sc.glif</string>
+  <key>LtnSmEngPalHook</key>
+  <string>L_tnS_mE_ngP_alH_ook.glif</string>
   <key>LtnSmLFishhook</key>
   <string>L_tnS_mL_F_ishhook.glif</string>
   <key>LtnSmSCurl</key>
